variables.Variables.scala.error
Compilation error:
Variables:5: error: '<-' expected but ')' found.
for (i<pas) backward() 
          ^Variables:7: error: illegal start of simple expression
	}
        ^